# vampnet-onnx-export

./: .gitignore  CLAUDE.md  CLEAN_STRUCTURE.md  ESSENTIAL_SCRIPTS.md  README.md  TROUBLESHOOTING_GUIDE.md  VAMPNET_C2F_SUMMARY.md  VAMPNET_ONNX_COMPLETE.md  VAMPNET_ONNX_DOCUMENTATION.md  VAMPNET_ONNX_FINAL_STATUS.md  check_onnx_encoder_weights.py  cleanup_repository.sh  compare_codec_weights.py  fix_onnx_encoder.py  generate_audio_simple.py  identify_essential_scripts.py  inspect_onnx_model.py  pyproject.toml  run_tests.sh  simple_working_demo.py  test_both_encoders.py  test_codec_comparison.py  test_codec_export.py  test_codec_token_comparison.py  test_encoder_preprocessing.py  test_onnx_inference.py  test_onnx_variable_length.py  test_preprocessing_comparison.py  test_simple_encode.py  transformer_comparison_results.json
archive_20250613_102706/: ARCHIVE_MANIFEST.txt  CONTRIBUTING.md  KNOWN_ISSUES.md  analyze_onnx_generation_issue.py  check_model_weights.py  check_vampnet_codec.py  test_codec_direct.py  test_codec_preprocessing.py  test_find_working_encoder.py  test_onnx_encoder_debug.py  test_onnx_export_codec.py  test_prepadded_encoder.py  test_simplified_pipeline.py  test_vampnet_generation_strategy.py  test_weighted_vs_unweighted.py  vampnet_model_structure_analysis.md  vampnet_structure_analysis.txt
docs/: README.md  file_structure_guide.md  model_files_overview.md  onnx_export_summary.md  onnx_generation_mismatch_analysis.md  quantization_analysis_summary.md  script_usage_guide.md  weight_transfer_technical_notes.md
examples/: benchmark_performance.py  complete_export_example.py  export_models_example.py  generate_music.py  use_proper_mask_generator.py
notebooks/: compare_encoders_batched.ipynb  compare_vampnet_onnx_encoding.ipynb  compare_vampnet_onnx_logits.ipynb  complete_weight_transfer.ipynb  debug_onnx_vs_vampnet.ipynb  simple_vampnet_onnx_demo.ipynb  test_iterative_decoding.ipynb  test_onnx_iterative_decoding.ipynb  test_onnx_with_sampling.ipynb  test_transformer_masking.ipynb  test_v4_audio_quality.ipynb  vampnet_complete_comparison_demo.ipynb  vampnet_custom_ops_export.ipynb  vampnet_onnx_audio_comparison.ipynb  vampnet_onnx_comparison_prepadded.ipynb  vampnet_onnx_complete_demo.ipynb  vampnet_onnx_export.ipynb  vampnet_onnx_pipeline_test.ipynb  vampnet_torchscript_export.ipynb
pipeline_comparison/: 01_setup_and_audio_processing.py  03_codec_encoder_comparison.py  04_mask_generator_comparison.py  04b_mask_generator_deterministic.py  05_transformer_forward_pass.py  MASK_GENERATION_FIX.md  investigate_logit_differences.py  investigate_logit_differences_simple.py  investigate_weight_transfer.py  test_corrected_mask_generator.py  test_mask_fix_final.py  test_mask_fix_verification.py  test_mask_semantics.py  test_proper_mask_generator.py  vampnet_logits_flow_guide.md
scripts/: analyze_vampnet_ffn.py  (+110 more)
(+76 files in other folders)
